--- a/AA-Tool/.classpath
+++ b/AA-Tool/.classpath
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry excluding="aufwandsabschaetzung/Cocomo.java|aufwandsabschaetzung/CocomoModel.java|aufwandsabschaetzung/CocomoView.java|aufwandsabschaetzung/AAufwandsabschaetzungModel.java|aufwandsabschaetzung/AAufwandsabschaetzungView.java|aufwandsabschaetzung/AufwandsabschaetzungFabrik.java|aufwandsabschaetzung/IAufwandsabschaetzung.java|aufwandsabschaetzung/Resources.java" kind="src" path="src"/>
+	<classpathentry kind="lib" path="itext5-5.5.12/itext5-itext-pdfa-5.5.12.jar"/>
+	<classpathentry kind="lib" path="itext5-5.5.12/itext5-itext-xtra-5.5.12.jar"/>
+	<classpathentry kind="lib" path="itext5-5.5.12/itext5-itextpdf-5.5.12.jar"/>
+	<classpathentry kind="lib" path="itext5-5.5.12/itext5-xmlworker-5.5.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
