--- a/AA-Tool/.classpath
+++ b/AA-Tool/.classpath
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry excluding="aufwandsabschaetzung/Cocomo.java|aufwandsabschaetzung/CocomoModel.java|aufwandsabschaetzung/CocomoView.java|aufwandsabschaetzung/AAufwandsabschaetzungModel.java|aufwandsabschaetzung/AAufwandsabschaetzungView.java|aufwandsabschaetzung/AufwandsabschaetzungFabrik.java|aufwandsabschaetzung/Resources.java" kind="src" path="src"/>
-	<classpathentry kind="lib" path="itext5-5.5.12/itext5-itext-pdfa-5.5.12.jar"/>
-	<classpathentry kind="lib" path="itext5-5.5.12/itext5-itext-xtra-5.5.12.jar"/>
-	<classpathentry kind="lib" path="itext5-5.5.12/itext5-itextpdf-5.5.12.jar"/>
-	<classpathentry kind="lib" path="itext5-5.5.12/itext5-xmlworker-5.5.12.jar"/>
-	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
-	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry excluding="aufwandsabschaetzung/Cocomo.java|aufwandsabschaetzung/CocomoModel.java|aufwandsabschaetzung/CocomoView.java|aufwandsabschaetzung/AAufwandsabschaetzungModel.java|aufwandsabschaetzung/AAufwandsabschaetzungView.java|aufwandsabschaetzung/AufwandsabschaetzungFabrik.java|aufwandsabschaetzung/Resources.java|view/ViewFactory.java" kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
