--- a/AA-Tool/.classpath
+++ b/AA-Tool/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry excluding="aufwandsabschaetzung/Cocomo.java|aufwandsabschaetzung/CocomoModel.java|aufwandsabschaetzung/CocomoView.java|aufwandsabschaetzung/AAufwandsabschaetzungModel.java|aufwandsabschaetzung/AAufwandsabschaetzungView.java|aufwandsabschaetzung/AufwandsabschaetzungFabrik.java|aufwandsabschaetzung/Resources.java|view/ViewFactory.java" kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
